Use String::formatted consistently
Automatically performed by OpenRewrite